--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pug": "^3.0.2"
   }
 }
