--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/alondramora/move-30#readme",
   "dependencies": {
+    "cloudinary": "^1.33.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2"
   }
