added cloudinary cloud name, api key, and api secret to dot env

--- a/config/.env
+++ b/config/.env
@@ -1,1 +1,7 @@
 DB_CONNECTION = mongodb+srv://alondramora:ijSjchFpvxkGQAPt@cluster0.stuvjh6.mongodb.net/move30?retryWrites=true&w=majority
+
+CLOUD_NAME = dedukcx9r
+
+API_KEY = 485957711647659
+
+API_SECRET = df4ASuHjd_XF5-Zc-AAx19vLAXI
