--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2"
   }
 }
