--- a/package.json
+++ b/package.json
@@ -19,15 +19,21 @@
   },
   "homepage": "https://github.com/alondramora/move-30#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.33.0",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-flash": "github:RGBboy/express-flash",
     "express-session": "^1.17.3",
+    "install": "^0.13.0",
+    "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "npm": "^9.3.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
